<?xml version="1.0" encoding="utf-8"?>
<!-- Placeholder launcher screen. Will be replaced by ThunderHomePage
     (sidebar + dashboard + recent folders/files + floating create dock)
     once we wire up the NavHost in phase 2. -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_base"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/cd_app_icon"
        android:src="@drawable/ic_thunder"
        app:tint="@color/thunder_primary"
        app:layout_constraintBottom_toTopOf="@+id/text_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@color/text_high_contrast"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/text_phase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <TextView
        android:id="@+id/text_phase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_phase_1"
        android:textColor="@color/text_muted"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
